; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_string.c_String_fontcolor.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_string.c_String_fontcolor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@String_fontcolor.fontW = internal constant [5 x float] [float 7.000000e+01, float 7.900000e+01, float 7.800000e+01, float 8.400000e+01, float 0.000000e+00], align 16
@String_fontcolor.colorW = internal constant [6 x float] [float 6.700000e+01, float 7.900000e+01, float 7.600000e+01, float 7.900000e+01, float 8.200000e+01, float 0.000000e+00], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32, i32*, i32*)* @String_fontcolor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @String_fontcolor(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %10, align 4
  %16 = load i32*, i32** %11, align 8
  %17 = load i32*, i32** %12, align 8
  %18 = call i32 @do_attribute_tag_format(i32* %13, i32* %14, i32 %15, i32* %16, i32* %17, float* getelementptr inbounds ([5 x float], [5 x float]* @String_fontcolor.fontW, i64 0, i64 0), float* getelementptr inbounds ([6 x float], [6 x float]* @String_fontcolor.colorW, i64 0, i64 0))
  ret i32 %18
}

declare dso_local i32 @do_attribute_tag_format(i32*, i32*, i32, i32*, i32*, float*, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
